# ytconverter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ytconverter.py  ytmp3.py
.github/: FUNDING.yml
.github/workflows/: python-ci.yml
standalone/: install.bat  install.sh  requirements.txt  update.sh  version.json  ytconverter.py
ytconverter/: __init__.py  __main__.py  config.py  constants.py  version.json
ytconverter/cli/: __init__.py  banner.py  menu.py  prompts.py
ytconverter/core/: bootstrap.py  version.py
ytconverter/downloaders/: __init__.py  base.py  multi_mp3.py  multi_mp4.py  playlist_mp3.py  playlist_mp4.py  single_mp3.py  single_mp4.py
ytconverter/utils/: __init__.py  platform_.py  sanitize.py  styling.py  update.py
